sketch-up without email route

--- a/frontend/my-react-app/src/Homepage.css
+++ b/frontend/my-react-app/src/Homepage.css
@@ -53,3 +53,18 @@
   margin: 20px auto; /* Center the button horizontally */
   cursor: pointer;
 }
+
+/* Homepage.css */
+.timeline-button {
+  background-color: black;
+  color: white;
+  border-radius: 30px;
+  font-size: 36px; /* Increase the font size to make it bigger */
+  border: 2px solid black;
+  box-shadow: 20px 20px 0 rgba(0, 0, 0, 0.2); /* Add a shadow to the right and bottom */
+  padding: 50px 160px; /* Increase the padding to make it bigger */
+  display: block;
+  margin: 20px auto; /* Center the button horizontally */
+  margin-top: 200px;
+  cursor: pointer;
+}
