--- a/frontend/my-react-app/src/Header.css
+++ b/frontend/my-react-app/src/Header.css
@@ -28,17 +28,23 @@
     text-align: center;
     font-size: 20px;
     margin-top: 0px;
+    display: flex;
+  align-items: center;
   }
 
   .title {
     margin-left: 30px;
     color: black;
+    display: flex;
+  align-items: center;
   }
+
+
 
   /* Style for the header image */
   .header-image {
-    width: 200px;
-    height: 200px;
+    width: 80px;
+    height: 80px;
     margin: 0px;
   }
 
@@ -46,49 +52,84 @@
   .menu-container {
     position: fixed;
     top: 5px; /* Adjust for the header height */
-    right: -300px; /* Start menu off-screen to the right */
+    left: -120px; /* Start menu off-screen to the left */
     width: 120px; /* Adjust the width as needed */
-    height: 45%;
+    height: 55%;
     background-color: rgba(18, 18, 18, 0.9);
-    transition: right 0.3s ease-in-out;
+    transition: left 0.3s ease-in-out; /* Change "right" to "left" */
     z-index: 1000;
     border-radius: 7px;
   }
+
   /* Set height to 28% on desktop screens */
   @media (min-width: 768px) {
     .menu-container {
-      height: 45%;
+      height: 50%;
     }
   }
 
   /* Set height to 20% on mobile screens */
   @media (max-width: 767px) {
     .menu-container {
-      height: 50%;
+      height: 55%;
     }
   }
 
   .menu-container.open {
-    right: 0;
+    left: 0; /* Change "right" to "left" to bring the menu in from the left when open */
   }
 
-  .menu-button {
-    color: black;
-    font-size: 24px;
-    margin-right: 20px;
-    cursor: pointer;
-  }
+.menu-button {
+  color: black;
+  font-size: 20px;
+  margin-left: 40px;
+  margin-right: 20px;
+  cursor: pointer;
+}
 
-  .close-button {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    cursor: pointer;
-    font-size: 20px;
-  }
+.dark-button {
+  background-color: black; /* Dark background color */
+  color: #fff; /* Text color in dark mode */
+  padding: 10px 20px; /* Adjust padding as needed */
+  border-radius: 10px;
+  box-shadow: 5px 5px 0 rgba(0, 0, 0, 0.2); /* Add a shadow to the right and bottom */
+  font-size: 10px; /* Adjust font size as needed */
+  cursor: pointer;
+  margin-left: 20px;
+}
 
-  .header.hidden {
+
+.title5{
+  margin-top: 10px;
+  margin-left: 10px;
+  color: black;
+}
+
+.cornerWrap{
+  display: flex;
+}
+
+.close-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+  font-size: 20px;
+}
+
+.header.hidden {
   visibility: hidden; /* Hide the element without affecting layout */
-   opacity: 0; /* Set opacity to 0 when hidden */
+  opacity: 0; /* Set opacity to 0 when hidden */
+}
 
- }
+/* Add styles for dark mode */
+.dark-mode {
+  background-color: #333; /* Replace with your dark mode background color */
+  color: #fff; /* Replace with your dark mode text color */
+}
+
+.dark-mode-text {
+  color: #fff; /* Text color in dark mode */
+}
+
+/* Rest of your styles... */
