--- a/frontend/my-react-app/src/Homepage.css
+++ b/frontend/my-react-app/src/Homepage.css
@@ -90,15 +90,24 @@
 .dark-mode {
   background-color: #000;
   color: #fff;
+  border-color: white;
+  box-shadow: 1px 1px 0 rgba(0, 0, 0, 0.2);
+
 }
 
 .dark-mode-text {
+  background-color: #000;
   color: #fff;
+  border-color: white;
+  box-shadow: 1px 1px 0 rgba(0, 0, 0, 0.2);
 }
 
 .dark-mode-button {
   background-color: #333;
   color: #fff;
+  border-color: white;
+  box-shadow: 1px 1px 0 rgba(0, 0, 0, 0.2);
+
 }
 
 /* Add more dark mode styles as needed */
