--- a/frontend/my-react-app/src/PrototypeHeader.css
+++ b/frontend/my-react-app/src/PrototypeHeader.css
@@ -9,6 +9,9 @@
   align-items: center;
   position: fixed;
   margin-top: 150px;
+  margin-left:5px;
+  margin-right:5px;
+  border-radius: 10px;
   top: 0;
   left: 0;
   right: 0;
