--- a/frontend/my-react-app/src/PrototypeSideMenu.css
+++ b/frontend/my-react-app/src/PrototypeSideMenu.css
@@ -7,9 +7,12 @@
   position: fixed;
   top: 0;
   left: 0;
+  margin-left:5px;
+  margin-right:5px;
   bottom: 0;
   z-index: 500;
   margin-top: 270px;
+  border-radius: 10px;
   padding: 20px;
   overflow-y: auto;
 }
