--- a/frontend/my-react-app/src/Homepage.css
+++ b/frontend/my-react-app/src/Homepage.css
@@ -100,11 +100,11 @@
 
 
 /* Add dark mode styles for the homepage */
-.dark-mode {
+.dark-mode1 {
   background-color: #000;
   color: #fff;
-  border-color: white;
-  box-shadow: 1px 1px 0 rgba(0, 0, 0, 0.2);
+  border-radius: 0px;
+  box-shadow: 20px 20px 20px 20px black;
 
 }
 
