--- a/frontend/my-react-app/src/Prototype.css
+++ b/frontend/my-react-app/src/Prototype.css
@@ -110,21 +110,25 @@
 }
 
 .content-grid {
-  margin-left: 10px;
+  margin-top: 125px;
+  margin-left: -19px;
+  border: 2px solid grey;
   display: grid;
+  width: 1278px;
+  border-radius: 10px;
   grid-template-columns: 200px 1fr; /* Adjust the width of the side menu as needed */
   grid-gap: 20px; /* Add spacing between columns */
   align-items: start; /* Align items to the top of the grid */
   padding: 20px; /* Add padding as needed */
   box-sizing: border-box; /* Include padding in the width */
 }
-
-/* Add a media query to adapt the layout for smaller screens (e.g., max-width: 768px) */
-@media (max-width: 768px) {
-  .content-grid {
-    grid-template-columns: 1fr; /* Stack columns for smaller screens */
+  /* Apply media query to adapt the layout for smaller screens (e.g., max-width: 768px) */
+  @media (max-width: 768px) {
+    .content-grid {grid-template-columns: 1fr; /* Stack columns for smaller screens */
   }
 }
+
+
 
 .prototype-container {
   display: grid;
