--- a/frontend/my-react-app/src/PrototypeHeader.css
+++ b/frontend/my-react-app/src/PrototypeHeader.css
@@ -8,7 +8,7 @@
   max-width: 1240px;
   justify-content: space-between;
   align-items: center;
-  position: fixed;
+  position: absolute;
   margin-top: 150px;
   margin-left:5px;
   margin-right:5px;
