--- a/frontend/my-react-app/src/PrototypeSideMenu.css
+++ b/frontend/my-react-app/src/PrototypeSideMenu.css
@@ -3,12 +3,11 @@
   background-color: white;
   color: black;
   border: 2px solid black; /* Set border style */
-  width: 75px;
   height: 300px;
   top: 0;
   left: 0;
-  margin-left:5px;
-  margin-right:5px;
+  margin-left: 5px;
+  margin-right: 5px;
   bottom: 0;
   z-index: 500;
   margin-top: 100px;
@@ -17,6 +16,7 @@
   overflow-y: auto;
   overflow-x: auto;
   transition: width 0.05s; /* Add a smooth transition effect for width changes */
+  display: inline-block; /* Prevent vertical expansion */
 }
 
 .prototype-side-menu ul {
@@ -28,6 +28,14 @@
   margin-bottom: 10px;
   font-size: 16px;
   cursor: pointer;
+  padding: 2px;
+  border: .5px solid black; /* Set border style */
+  border-radius: 3px;
+}
+
+.sidemenu-title {
+  margin-top: -15px;
+  margin-bottom: 5px;
 }
 
 /* Add more styling as needed */
@@ -35,6 +43,11 @@
   cursor: col-resize; /* Change cursor to resizing cursor when resizing */
   user-select: none; /* Disable text selection during resizing */
   pointer-events: none; /* Ignore pointer events during resizing */
+  transition: none; /* Disable transition during resizing */
+}
+
+.prototype-side-menu.resizing li {
+  pointer-events: auto; /* Allow pointer events for li elements during resizing */
 }
 
 /* Add dark mode styles for the homepage */
