parent update component added

--- a/frontend/my-react-app/src/PrototypeHeader.css
+++ b/frontend/my-react-app/src/PrototypeHeader.css
@@ -33,6 +33,14 @@
   height: 80px;
 }
 
+.button-wrap{
+  display: flex;
+}
+
+.title{
+  font-size: 14px;
+}
+
 
 /* Add dark mode styles for the homepage */
 .dark-mode {
