--- a/frontend/my-react-app/src/Upload.css
+++ b/frontend/my-react-app/src/Upload.css
@@ -3,9 +3,8 @@
   position: relative;
   text-align: center;
   margin: 5px;
+  margin-top: 20px !important;
 }
-
-
 
 .popup-button {
   background-color: #2196F3;
@@ -16,6 +15,38 @@
   cursor: pointer;
   z-index: 1; /* Ensure the popup is above the button */
 
+}
+
+.dropdown-button {
+  background-color: #3498db;
+  color: white;
+  border: none;
+  padding: 10px;
+  cursor: pointer;
+  background-color: black;
+  padding: 10px;
+  border-radius: 10px;
+  color: white;
+
+  box-shadow: 5px 5px 0 rgba(0, 0, 0, 0.2); /* Add a shadow to the right and bottom */
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  min-width: 160px;
+  z-index: 1;
+  margin-right: 20px;
+  margin-top: 15px;
+
+
+}
+
+.open .dropdown-content {
+  display: flex;
+  flex-direction: column;
+  margin-right: 20px;
+  margin-top: 15px;
 }
 
 .popup {
@@ -35,19 +66,20 @@
 }
 
 .show-hello-button {
-    background-color: black;
-    padding: 10px;
-    border-radius: 10px;
-    color: white;
-    box-shadow: 5px 5px 0 rgba(0, 0, 0, 0.2); /* Add a shadow to the right and bottom */
-
-  }
+  border-radius: 10px;
+  padding: 5px 10px;
+  background-color: black;
+  color: white;
+  border: 1px solid black; /* Add a border */
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2); /* Add a right and bottom shadow */
+}
 
 
 .dark-mode {
   background-color: #000;
   color: #fff;
   border-color: white;
+  box-shadow: 1px 1px 0 rgba(0, 0, 0, 0.2);
 
 }
 
