--- a/frontend/my-react-app/src/PrototypeSideMenu.css
+++ b/frontend/my-react-app/src/PrototypeSideMenu.css
@@ -12,6 +12,7 @@
   z-index: 500;
   margin-top: 100px;
   border-radius: 10px;
+  width: 250px;
   padding: 20px;
   overflow-y: auto;
   overflow-x: auto;
