--- a/frontend/my-react-app/src/Upload.css
+++ b/frontend/my-react-app/src/Upload.css
@@ -34,10 +34,14 @@
 .dropdown-content {
   display: none;
   position: absolute;
-  min-width: 160px;
   z-index: 1;
   margin-right: 20px;
   margin-top: 15px;
+  background-color: grey;
+  border-radius: 5px;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-bottom: 10px;
 
 
 }
@@ -79,9 +83,11 @@
   border-radius: 5px;
   color: white;
   margin-top: 5px;
+  padding-left: 5px;
+  padding-right: 5px;
   padding-top: 5px;
   padding-bottom: 5px;
-  
+
 
 
 
@@ -113,4 +119,21 @@
   border-color: white;
   box-shadow: 1px 1px 0 rgba(0, 0, 0, 0.2);
 
+}
+
+.search-bar {
+  padding: 10px;
+  border-bottom: 1px solid #ccc;
+  width: 100px;
+  border-radius: 5px;
+  margin-right: 15px;
+}
+
+input[type="text"] {
+  width: 100%;
+  padding: 10px;
+  margin: 0;
+  border: none;
+  border-bottom: 1px solid #ccc;
+  outline: none;
 }
