--- a/frontend/my-react-app/src/PrototypeSideMenu.css
+++ b/frontend/my-react-app/src/PrototypeSideMenu.css
@@ -56,6 +56,11 @@
   color: white; /* Text color for the selected item */
 }
 
+.elementTitle{
+  margin-top: 100px;
+  margin-bottom: -80px
+}
+
 /* Add dark mode styles for the homepage */
 .dark-mode {
   background-color: #333;
