--- a/frontend/my-react-app/src/Upload.css
+++ b/frontend/my-react-app/src/Upload.css
@@ -59,14 +59,14 @@
 }
 
 .popup-message {
-  position: absolute;
+  position: fixed;
   background-color: #333;
   color: #fff;
   padding: 5px;
   border-radius: 5px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
   z-index: 999;
-  transform: translate(200px, 100px); /* Position the popup 200px above and 200px to the left of the mouse pointer */
+  transform: translate(100px, 200px); /* Position the popup 200px above and 200px to the left of the mouse pointer */
 }
 
 
