--- a/frontend/my-react-app/src/ChatGBT.css
+++ b/frontend/my-react-app/src/ChatGBT.css
@@ -11,6 +11,8 @@
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   margin-top: 100px;
   margin-bottom: 100px;
+  z-index: 99999;
+  
 }
 
 /* Form styles */
