--- a/frontend/my-react-app/src/Prototype.css
+++ b/frontend/my-react-app/src/Prototype.css
@@ -111,7 +111,8 @@
 
 .content-grid {
   margin-top: 125px;
-  margin-left: -19px;
+  margin-left: 0px;
+  margin-right: 5px;
   border: 2px solid grey;
   display: grid;
   width: 1878px;
