--- a/frontend/my-react-app/src/Modal.css
+++ b/frontend/my-react-app/src/Modal.css
@@ -25,6 +25,18 @@
   overflow: auto;
 }
 
+.modal3 {
+  position: fixed;
+  top: 250px;
+  left: 50px;
+  right: 50px;
+  background: white;
+  border: 2px solid black;
+  border-radius: 10px;
+  overflow: auto;
+}
+
+
 .close-button {
   position: absolute;
   top: 10px;
@@ -65,7 +77,7 @@
   background-color: #3498db;
   color: white;
   border: none;
-  padding: 10px;
+  padding: 10px !important;
   cursor: pointer;
   background-color: black;
   padding: 10px;
