--- a/frontend/my-react-app/src/PrototypeHeader.css
+++ b/frontend/my-react-app/src/PrototypeHeader.css
@@ -54,6 +54,14 @@
   margin-left: -100px;
 }
 
+.popup-container {
+  position: relative;
+  text-align: center;
+  margin: 5px;
+  margin-top: 20px !important;
+  display: flex;
+}
+
 .dropdown-button {
   background-color: #3498db;
   color: white;
