--- a/frontend/my-react-app/src/XLSXSheetRenderer.css
+++ b/frontend/my-react-app/src/XLSXSheetRenderer.css
@@ -120,6 +120,39 @@
 }
 
 
-.schemaRibbon{
-  margin-top: 150px;
+
+
+.schemaRibbon {
+  display: fixed;
+  justify-content: space-between;
+  background-color: white;
+  color: white;
+  padding: 10px;
+  border-radius: 5px;
+  margin-top: 100px;
+}
+
+.subRibbon{
+  display: flex;
+  justify-content: space-between;
+  background-color: #007bff;
+  color: white;
+  padding: 10px;
+  border-radius: 5px;
+  margin-top: 10px;
+}
+
+.ribbon-button {
+  background-color: white;
+  border: 2px solid grey;
+  color: black;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  margin: 5px;
+  border-radius: 5px;
+}
+
+.ribbon-button:hover {
+  background-color: #007bff;
 }
