--- a/frontend/my-react-app/src/XLSXSheetRenderer.css
+++ b/frontend/my-react-app/src/XLSXSheetRenderer.css
@@ -18,6 +18,11 @@
   margin-bottom: -80px
 }
 
+.elementTitle2{
+  margin-top: 100px;
+  margin-bottom: 0px
+}
+
 .selected-button {
   background-color: grey !important;
   /* Add any other styles you want for the selected button */
@@ -51,6 +56,11 @@
 
 .table-wrap{
   margin-left: 100px;
+}
+
+.table-wrap2{
+  margin-left: 100px;
+  margin-top: 0px;
 }
 
 .table-button {
