nees cleaner reactivity on overlay and clear

--- a/frontend/my-react-app/src/PrototypeSideMenu.css
+++ b/frontend/my-react-app/src/PrototypeSideMenu.css
@@ -20,6 +20,11 @@
   display: inline-block; /* Prevent vertical expansion */
 }
 
+.structureInstanceWrap{
+  display: fixed;
+  margin-top: 00px;
+}
+
 .prototype-side-menu ul {
   list-style: none;
   padding: 0;
