--- a/frontend/my-react-app/src/XLSXSheetRenderer.css
+++ b/frontend/my-react-app/src/XLSXSheetRenderer.css
@@ -63,14 +63,27 @@
   margin-top: 0px;
 }
 
+.cellWrapper{
+  display: flex;
+}
+
 .unique-menu-container {
   position: relative;
 }
 
 .unique-menu-button {
   cursor: pointer;
-  background-color: grey;
+  background-color: #f5f5f5; /* Subtle background color */
   margin: 10px 10px;
+  border: 1px solid #ccc;
+  padding: 5px 10px;
+  border-radius: 5px;
+  margin-top: -5px;
+  transition: background-color 0.3s; /* Smooth background color transition */
+}
+
+.unique-menu-button:hover {
+  background-color: #e0e0e0; /* Hover background color */
 }
 
 .unique-popup-menu {
@@ -78,7 +91,7 @@
   top: 100%; /* Position the menu below the cell */
   left: 0;
   display: none; /* Initially, hide the menu */
-  background-color: grey;
+  background-color: #f5f5f5; /* Subtle background color */
   border: 1px solid #ccc;
   padding: 10px;
 }
@@ -86,6 +99,7 @@
 .unique-menu-show .unique-popup-menu {
   display: block; /* Show the menu when .unique-show is applied to .unique-menu-container */
 }
+
 
 
 
