--- a/frontend/my-react-app/src/XLSXSheetRenderer.css
+++ b/frontend/my-react-app/src/XLSXSheetRenderer.css
@@ -93,11 +93,23 @@
   display: none; /* Initially, hide the menu */
   background-color: #f5f5f5; /* Subtle background color */
   border: 1px solid #ccc;
+  border-radius: 5px;
+  z-index: 99999;
   padding: 10px;
 }
 
 .unique-menu-show .unique-popup-menu {
   display: block; /* Show the menu when .unique-show is applied to .unique-menu-container */
+}
+
+.unique-menu-hide .unique-popup-menu{
+  display: none;
+}
+
+
+.menu-button-cell{
+  border-radius: 5px;
+  margin-top: 5px;
 }
 
 
