--- a/frontend/my-react-app/src/PipelineSideMenu.css
+++ b/frontend/my-react-app/src/PipelineSideMenu.css
@@ -25,12 +25,12 @@
   margin-left: -215px;
 }
 
-.prototype-side-menu ul {
+.pipeline-side-menu ul {
   list-style: none;
   padding: 0;
 }
 
-.prototype-side-menu li {
+.pipeline-side-menu li {
   margin-bottom: 10px;
   font-size: 16px;
   cursor: pointer;
