--- a/frontend/my-react-app/src/Prototype.css
+++ b/frontend/my-react-app/src/Prototype.css
@@ -25,6 +25,11 @@
 }
 
 
+.fillerClass{
+  margin-top: 100px;
+  margin-left: 200px;
+}
+
 /* Add this CSS to your stylesheet */
 
 /* Style the modal content */
