--- a/frontend/my-react-app/src/Prototype.css
+++ b/frontend/my-react-app/src/Prototype.css
@@ -121,7 +121,8 @@
   border: 2px solid grey;
   display: grid;
   width: 1878px;
-  margin-bottom: -150px;
+  margin-bottom: -600px;
+  bottom: 0;
   border-radius: 10px;
   grid-template-columns: 200px 1fr; /* Adjust the width of the side menu as needed */
   grid-gap: 20px; /* Add spacing between columns */
