--- a/frontend/my-react-app/src/XLSXSheetRenderer.css
+++ b/frontend/my-react-app/src/XLSXSheetRenderer.css
@@ -106,6 +106,11 @@
   display: none;
 }
 
+/* CSS for green background */
+.green-background {
+  background-color: lightgoldenrodyellow;
+}
+
 
 .menu-button-cell{
   border-radius: 5px;
