--- a/frontend/my-react-app/src/Homepage.css
+++ b/frontend/my-react-app/src/Homepage.css
@@ -2,6 +2,7 @@
   text-align: center;
   padding: 20px;
   margin-top: 100px;
+  background-color: #F8FAFC;
 }
 /* Media query for mobile devices */
   @media (max-width: 768px) {
