--- a/frontend/my-react-app/src/PrototypeSideMenu.css
+++ b/frontend/my-react-app/src/PrototypeSideMenu.css
@@ -2,13 +2,14 @@
 .prototype-side-menu {
   background-color: white;
   color: black;
-  border: 2px solid black; /* Set border style */
-  height: 300px;
+  /* border: 2px solid black; /* Set border style */
+  height: 400px;
   top: 0;
   left: 0;
-  margin-left: 5px;
-  margin-right: 5px;
+  margin-left: -40px;
+  margin-right: 15px;
   bottom: 0;
+  background-color: #F8FAFC;
   z-index: 500;
   margin-top: 100px;
   border-radius: 10px;
@@ -32,10 +33,11 @@
 
 .prototype-side-menu li {
   margin-bottom: 10px;
-  font-size: 16px;
+  font-size: 20px;
   cursor: pointer;
-  padding: 2px;
-  border: .5px solid black; /* Set border style */
+  padding: 10px;
+  background-color: navajowhite;
+  /* border: .5px solid black; /* Set border style */
   border-radius: 3px;
 }
 
@@ -58,7 +60,7 @@
 
 .selected {
   background-color: grey; /* Change to the desired grey color */
-  color: white; /* Text color for the selected item */
+  color: black; /* Text color for the selected item */
 }
 
 .elementTitle{
