--- a/frontend/my-react-app/src/Prototype.css
+++ b/frontend/my-react-app/src/Prototype.css
@@ -26,7 +26,8 @@
 
 
 .fillerClass{
-  margin-top: 150px;
+  margin-top: -100px;
+  opacity: .01;
   margin-left: 200px;
 }
 
@@ -115,14 +116,13 @@
 }
 
 .content-grid {
-  margin-top: 125px;
+  margin-top: 205px;
   margin-left: 0px;
   margin-right: 5px;
   background-color: #F8FAFC;
-
   display: grid;
   width: 1878px;
-  margin-bottom: -800px;
+  margin-bottom: -1200px;
   bottom: 0;
   border-radius: 10px;
   grid-template-columns: 200px 1fr; /* Adjust the width of the side menu as needed */
@@ -148,6 +148,7 @@
   box-sizing: border-box; /* Include padding in the width */
   border-radius: 0px !important;
   transform: scale(0.67);
+  margin-bottom: -20px;
   background-color: #F8FAFC;
   width: 145%;
   transform-origin: 0 0;
