--- a/frontend/my-react-app/src/Modal.css
+++ b/frontend/my-react-app/src/Modal.css
@@ -87,6 +87,8 @@
   color: white;
   display: flex;
   box-shadow: 5px 5px 0 rgba(0, 0, 0, 0.2); /* Add a shadow to the right and bottom */
+  z-index: 99999;
+
 }
 
 .dropdown-content {
@@ -100,6 +102,8 @@
   padding-left: 5px;
   padding-right: 5px;
   padding-bottom: 10px;
+  z-index: 99999;
+
 
 
 }
@@ -108,6 +112,7 @@
   display: flex;
   flex-direction: column;
   margin-right: 20px;
+  z-index: 99999;
   margin-top: 55px;
 }
 
