--- a/frontend/my-react-app/src/PrototypeSideMenu.css
+++ b/frontend/my-react-app/src/PrototypeSideMenu.css
@@ -3,16 +3,16 @@
   background-color: white;
   color: black;
   /* border: 2px solid black; /* Set border style */
-  height: 400px;
+  height: 100%;
   top: 0;
   left: 0;
   margin-left: -40px;
   margin-right: 15px;
   bottom: 0;
   background-color: #F8FAFC;
+  border-right: 2px solid black;
   z-index: 500;
   margin-top: 100px;
-  border-radius: 10px;
   width: 250px;
   padding: 20px;
   overflow-y: auto;
@@ -64,8 +64,8 @@
 }
 
 .elementTitle{
-  margin-top: 100px;
-  margin-bottom: -80px
+  margin-top: 00px;
+  margin-bottom: 80px
 }
 
 /* Add dark mode styles for the homepage */
