--- a/frontend/my-react-app/src/StructureInstanceTable.css
+++ b/frontend/my-react-app/src/StructureInstanceTable.css
@@ -5,8 +5,8 @@
   padding: 20px;
   width: 100%;
   max-width: 800px;
-  margin-top: 140px;
-  margin-left: 350px;
+  margin-top: 50px;
+  margin-left: 250px;
   border-radius: 10px;
 }
 
@@ -17,6 +17,24 @@
   margin-bottom: 20px;
 }
 
+.elementTitle5{
+  font-size: 20px;
+  margin-bottom: 10px;
+  margin-left: 200px;
+}
+
+.structureInstanceWrap2{
+  margin-top: 100px;
+}
+
+.element-title3 {
+  font-size: 24px;
+  font-weight: bold;
+  color: black;
+  margin-left: 400px;
+  margin-bottom: 20px;
+  margin-top: 800px;
+}
 /* CSS for the balance sheet table */
 .balance-sheet-table {
   width: 100%;
