--- a/frontend/my-react-app/src/Header.css
+++ b/frontend/my-react-app/src/Header.css
@@ -1,6 +1,6 @@
   /* Add styles for the header */
   .header {
-    background-color: rgba(18, 18, 18, 0.01);
+    background-color: #F8FAFC;
     color: white;
     position: fixed;
     top: 0;
